Less is more